add hero section

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
     @@include('_header.html')
 
     <div class="wrapper d-flex flex-column">
-        <main class="main">Im main</main>
+        <main class="main">
+            @@include('_hero.html')
+        </main>
     </div>
 
     @@include('_footer.html')
