implement main-goals section

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
     <div class="wrapper d-flex flex-column">
         <main class="main">
             @@include('_hero.html')
+            @@include('_about.html')
+            @@include('_mainGoals.html')
+
         </main>
     </div>
 
