style goals section and add  main font

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <main class="main">
             @@include('_hero.html')
             @@include('_about.html')
-            @@include('_mainGoals.html')
+            @@include('_goals.html')
 
         </main>
     </div>
