--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
             @@include('_hero.html')
             @@include('_about.html')
             @@include('_goals.html')
+            @@include('_projects.html')
 
         </main>
     </div>
