--- a/src/html/_projects.html
+++ b/src/html/_projects.html
@@ -1,3 +1,38 @@
 <section class="projects">
-    <div class="container"></div>
+    <div class="container">
+        <h3 class="projects__title">Наши проекты</h3>
+        <div class="projects__images-wrapper">
+            <div class="projects__images-centre d-flex">
+                <div class="projects__images-main-img">
+                    <div class="shadow"></div>
+                    <img src="../img/project_1.png" alt="">
+                </div>
+
+                <div class="projects__images-about">
+                    <h3 class="text-uppercase">Досуговый Центр</h3>
+                    <button class="details">
+                        <span  class="text-uppercase">Подробнее</span>
+                        <img src="../img/arrow-forward--white.svg" alt="">
+                    </button>
+                </div> 
+
+                <div>
+                    <img src="../img/project_2.png" alt="">
+                </div>
+            </div>
+
+           
+        </div>
+              
+        <div class="projects__images-centre">
+            <img src="../img/project_3.png" alt="">
+            <img src="../img/project_4.png" alt="">
+            <img src="../img/project_5.png" alt="">
+        </div>
+
+        <button class="all__projects">
+            <span  class="text-uppercase">Все проекты</span>
+            <img src="../img/arrow-forward--white.svg" alt="">
+        </button>
+    </div>
 </section>
