--- a/src/html/_projects.html
+++ b/src/html/_projects.html
@@ -8,9 +8,9 @@
                     <img src="../img/project_1.png" alt="">
                 </div>
 
-                <div class="projects__images-about">
+                <div class="projects__images-about d-flex flex-column">
                     <h3 class="text-uppercase">Досуговый Центр</h3>
-                    <button class="details">
+                    <button class="details d-flex align-items-center">
                         <span  class="text-uppercase">Подробнее</span>
                         <img src="../img/arrow-forward--white.svg" alt="">
                     </button>
@@ -24,13 +24,13 @@
            
         </div>
               
-        <div class="projects__images-centre">
+        <div class="projects__images-centre second-line d-flex">
             <img src="../img/project_3.png" alt="">
             <img src="../img/project_4.png" alt="">
             <img src="../img/project_5.png" alt="">
         </div>
 
-        <button class="all__projects">
+        <button class="all__projects-btn">
             <span  class="text-uppercase">Все проекты</span>
             <img src="../img/arrow-forward--white.svg" alt="">
         </button>
