implement and style btn-projects

--- a/src/html/_projects.html
+++ b/src/html/_projects.html
@@ -15,28 +15,13 @@
             <div class="project-item" data-img="../img/project_3.png"></div>
             <div class="project-item" data-img="../img/project_4.png"></div>
             <div class="project-item" data-img="../img/project_5.png"></div>
-
-            <!-- <div class="projects__images-centre d-flex">
-                <div class="projects__images-main-img">
-                    <div class="shadow"></div>
-                    <img src="../img/project_1.png" alt="">
-                </div>
-
-                <div class="projects__images-about d-flex flex-column">
-                    <h3 class="text-uppercase">Досуговый Центр</h3>
-                    <button class="details d-flex align-items-center">
-                        <span  class="text-uppercase">Подробнее</span>
-                        <img src="../img/arrow-forward--white.svg" alt="">
-                    </button>
-                </div> 
-            </div> -->
-
-
         </div>
-        <button class="all__projects-btn">
-            <span  class="text-uppercase">Все проекты</span>
-            <img src="../img/arrow-forward--white.svg" alt="">
-        </button>  
+        <div class="project__btn d-flex justify-content-end">
+            <button class="all__projects-btn d-flex align-items-center">
+                <span  class="text-uppercase">Все проекты</span>
+                <img src="../img/arrow-forward--white.svg" alt="">
+            </button>  
+        </div>
       
     </div>
 </section>
