add contact-us section

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
             @@include('_about.html')
             @@include('_goals.html')
             @@include('_projects.html')
+            @@include('_contact.html')
 
         </main>
     </div>
