add burger menu

--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -4,6 +4,9 @@
             <a class="logo" href="">
                 <img src="img/logo.png" alt="logo">
             </a>
+            <div class="header__burger">
+                <span></span>
+            </div>
             <nav class="menu">
                 <ul class="menu__list d-flex">
                     <li class="menu__list-item">
