implement media query

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,14 @@
 
     <div class="wrapper d-flex flex-column">
         <main class="main">
-            @@include('_hero.html')
-            @@include('_about.html')
-            @@include('_goals.html')
-            @@include('_projects.html')
-            @@include('_contact.html')
+            <div class="container">
+                @@include('_hero.html')
+                @@include('_about.html')
+                @@include('_goals.html')
+                @@include('_projects.html')
+                @@include('_contact.html')
+            </div>
+          
 
         </main>
     </div>
