implement animation and slider

--- a/src/html/_hero.html
+++ b/src/html/_hero.html
@@ -15,14 +15,15 @@
                 <span class="hero__btn-line"></span>
             </div>
             <div class="hero__subtitle d-flex">
-                <span>01</span>
+                <span id="slider-number">01</span>
                 <img src="../img/divider.svg" alt="divider">
-                <span>02</span>
+                <span id="total-sliders">02</span>
             </div>
         </div>
         <div class="hero__slider">
             <div class="hero__slider-img">
-                <img src="../img/hero_img.png" alt="hero_image">
+                <img class="slider slider--active" src="../img/hero_img.png" alt="hero_image">
+                <img class="slider" src="../img/hero_img_2.png" alt="hero_image">
                 <button class="hero__slider-btn d-flex align-items-center">
                     <span class="text-uppercase">Взглянуть</span>
                     <img src="../img/arrow-forward.svg" alt="btn-forward">
